Switch build to JDK 11
Co-authored-by: Volkan Yazıcı <volkan@yazi.ci>